--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_change_passwork.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_change_passwork.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.group6.dulichdoday.Dialog_Change">
 
     <TextView
-        android:id="@+id/dialog_info"
+        android:id="@+id/dialogChangePass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
@@ -17,11 +17,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/dialog_info"
+        android:layout_below="@id/dialogChangePass"
         android:backgroundTint="@color/colorPrimary">
 
         <Button
-            android:id="@+id/dialog_ok"
+            android:id="@+id/dialog_yes"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@color/cardview_dark_background"
@@ -29,7 +29,7 @@
             android:text="Yes"/>
 
         <Button
-            android:id="@+id/dialog_cancel"
+            android:id="@+id/dialog_huy"
             android:layout_width="0dp"
             android:background="@color/cardview_dark_background"
             android:layout_height="match_parent"
