--- a/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
@@ -6,121 +6,135 @@
     android:layout_height="match_parent"
     tools:context="com.example.group6.dulichdoday.DetailPersonalActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/color_main"
-            android:orientation="horizontal"
-            android:gravity="center">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
-                android:gravity="center|left">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/travel" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cập nhật thông tin"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white"
-                    android:textSize="20sp"/>
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   android:layout_weight="1"
+                   android:background="@color/color_main"
+                   android:orientation="horizontal"
+                   android:gravity="center">
 
-                <TextView
-                    android:id="@+id/cancel_update"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="100dp"
-                    android:text="Hủy bỏ"/>
+                   <LinearLayout
+                       android:layout_width="0dp"
+                       android:layout_height="match_parent"
+                       android:layout_weight="1"
+                       android:layout_marginLeft="10dp"
+                       android:gravity="center|left">
 
-            </LinearLayout>
+                       <ImageView
+                           android:layout_width="30dp"
+                           android:layout_height="30dp"
+                           android:src="@drawable/travel" />
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:text="Cập nhật thông tin"
+                           android:layout_marginLeft="10dp"
+                           android:textStyle="bold"
+                           android:textColor="@android:color/white"
+                           android:textSize="20sp"/>
 
-        </LinearLayout>
+                       <TextView
+                           android:id="@+id/cancel_update"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:textSize="17sp"
+                           android:textColor="@android:color/white"
+                           android:textStyle="bold"
+                           android:layout_marginLeft="100dp"
+                           android:text="Hủy bỏ"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="11"
-            android:background="@color/color_main"
-            android:layout_marginTop="2dp"
-            android:orientation="vertical"
-            android:gravity="center">
+                   </LinearLayout>
 
-            <ImageView
-                android:id="@+id/img_choosen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/image"/>
+               </LinearLayout>
 
-            <EditText
-                android:id="@+id/edtName"
-                style="@style/Edittext"
-                android:drawableLeft="@drawable/detail_user"
-                android:drawablePadding="20dp"
-                android:hint="Họ và tên"/>
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   android:layout_weight="11"
+                   android:background="@color/color_main"
+                   android:layout_marginTop="2dp"
+                   android:orientation="vertical"
+                   android:gravity="center">
 
-            <EditText
-                android:id="@+id/edtDate"
-                style="@style/Edittext"
-                android:drawableLeft="@drawable/ic_birthday"
-                android:drawablePadding="20dp"
-                android:hint="Ngày sinh"/>
+                   <ImageView
+                       android:id="@+id/img_choosen"
+                       android:layout_width="180dp"
+                       android:layout_height="180dp"
+                       android:src="@drawable/image"/>
 
-            <EditText
-                android:id="@+id/edtSex"
-                style="@style/Edittext"
-                android:drawableLeft="@drawable/ic_sex"
-                android:drawablePadding="20dp"
-                android:hint="Giới tính"/>
+                   <EditText
+                       android:id="@+id/edtName"
+                       style="@style/Edittext"
+                       android:drawableLeft="@drawable/detail_user"
+                       android:drawablePadding="20dp"
+                       android:hint="Họ và tên"/>
 
-            <EditText
-                android:id="@+id/edtPhone"
-                style="@style/Edittext"
-                android:inputType="number"
-                android:drawableLeft="@drawable/ic_phone"
-                android:drawablePadding="20dp"
-                android:hint="Số điện thoại"/>
+                   <EditText
+                       android:id="@+id/edtDate"
+                       style="@style/Edittext"
+                       android:drawableLeft="@drawable/ic_birthday"
+                       android:drawablePadding="20dp"
+                       android:hint="Ngày sinh"/>
 
-            <EditText
-                android:id="@+id/edtAddress"
-                style="@style/Edittext"
-                android:drawableLeft="@drawable/detail_address"
-                android:drawablePadding="20dp"
-                android:hint="Địa chỉ"/>
+                   <EditText
+                       android:id="@+id/edtSex"
+                       style="@style/Edittext"
+                       android:drawableLeft="@drawable/ic_sex"
+                       android:drawablePadding="20dp"
+                       android:hint="Giới tính"/>
 
-            <TextView
-                android:id="@+id/btnUpdateUser"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:padding="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="30dp"
-                android:textColor="@android:color/white"
-                android:background="@drawable/custom_btn_login"
-                android:text="Cập nhật thông tin"/>
+                   <EditText
+                       android:id="@+id/edtPhone"
+                       style="@style/Edittext"
+                       android:inputType="number"
+                       android:drawableLeft="@drawable/ic_phone"
+                       android:drawablePadding="20dp"
+                       android:hint="Số điện thoại"/>
 
-        </LinearLayout>
+                   <EditText
+                       android:id="@+id/edtAddress"
+                       style="@style/Edittext"
+                       android:drawableLeft="@drawable/detail_address"
+                       android:drawablePadding="20dp"
+                       android:hint="Địa chỉ"/>
+
+                   <TextView
+                       android:id="@+id/btnUpdateUser"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:gravity="center"
+                       android:textSize="15dp"
+                       android:textStyle="bold"
+                       android:padding="10dp"
+                       android:layout_marginLeft="20dp"
+                       android:layout_marginRight="20dp"
+                       android:layout_marginTop="30dp"
+                       android:textColor="@android:color/white"
+                       android:background="@drawable/custom_btn_login"
+                       android:text="Cập nhật thông tin"/>
+
+               </LinearLayout>
 
 
-    </LinearLayout>
+           </LinearLayout>
+
+       </LinearLayout>
+
+   </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
